Bug fixed.
(Scenario wizard also fixed, allowing the filename to be specified)

git-svn-id: svn://svn.code.sf.net/p/destecs/code/trunk@135 fd54fc82-ac30-4e97-bb06-279643433f24